--- a/1.5/style.css
+++ b/1.5/style.css
@@ -1,502 +1,293 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
-/* Document
-   ========================================================================== */
-/**
- * 1. Correct the line height in all browsers.
- * 2. Prevent adjustments of font size after orientation changes in iOS.
- */
-html {
-    line-height: 1.15;
-    /* 1 */
-    -webkit-text-size-adjust: 100%;
-    /* 2 */
-}
-
-/* Sections
-   ========================================================================== */
-/**
- * Remove the margin in all browsers.
- */
-body {
-    margin: 0;
-}
-
-/**
- * Render the `main` element consistently in IE.
- */
-main {
-    display: block;
-}
-
-/**
- * Correct the font size and margin on `h1` elements within `section` and
- * `article` contexts in Chrome, Firefox, and Safari.
- */
-h1 {
-    font-size: 2em;
-    margin: 0.67em 0;
-}
-
-/* Grouping content
-   ========================================================================== */
-/**
- * 1. Add the correct box sizing in Firefox.
- * 2. Show the overflow in Edge and IE.
- */
-hr {
-    box-sizing: content-box;
-    /* 1 */
-    height: 0;
-    /* 1 */
-    overflow: visible;
-    /* 2 */
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-pre {
-    font-family: monospace, monospace;
-    /* 1 */
-    font-size: 1em;
-    /* 2 */
-}
-
-/* Text-level semantics
-   ========================================================================== */
-/**
- * Remove the gray background on active links in IE 10.
- */
-a {
-    background-color: transparent;
-}
-
-/**
- * 1. Remove the bottom border in Chrome 57-
- * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
- */
-abbr[title] {
-    border-bottom: none;
-    /* 1 */
-    text-decoration: underline;
-    /* 2 */
-    -webkit-text-decoration: underline dotted;
-    text-decoration: underline dotted;
-    /* 2 */
-}
-
-/**
- * Add the correct font weight in Chrome, Edge, and Safari.
- */
-b,
-strong {
-    font-weight: bolder;
-}
-
-/**
- * 1. Correct the inheritance and scaling of font size in all browsers.
- * 2. Correct the odd `em` font sizing in all browsers.
- */
-code,
-kbd,
-samp {
-    font-family: monospace, monospace;
-    /* 1 */
-    font-size: 1em;
-    /* 2 */
-}
-
-/**
- * Add the correct font size in all browsers.
- */
-small {
-    font-size: 80%;
-}
-
-/**
- * Prevent `sub` and `sup` elements from affecting the line height in
- * all browsers.
- */
-sub,
-sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
-}
-
-sub {
-    bottom: -0.25em;
-}
-
-sup {
-    top: -0.5em;
-}
-
-/* Embedded content
-   ========================================================================== */
-/**
- * Remove the border on images inside links in IE 10.
- */
-img {
-    border-style: none;
-}
-
-/* Forms
-   ========================================================================== */
-/**
- * 1. Change the font styles in all browsers.
- * 2. Remove the margin in Firefox and Safari.
- */
-button,
-input,
-optgroup,
-select,
-textarea {
-    font-family: inherit;
-    /* 1 */
-    font-size: 100%;
-    /* 1 */
-    line-height: 1.15;
-    /* 1 */
-    margin: 0;
-    /* 2 */
-}
-
-/**
- * Show the overflow in IE.
- * 1. Show the overflow in Edge.
- */
-button,
-input {
-    /* 1 */
-    overflow: visible;
-}
-
-/**
- * Remove the inheritance of text transform in Edge, Firefox, and IE.
- * 1. Remove the inheritance of text transform in Firefox.
- */
-button,
-select {
-    /* 1 */
-    text-transform: none;
-}
-
-/**
- * Correct the inability to style clickable types in iOS and Safari.
- */
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-    -webkit-appearance: button;
-}
-
-/**
- * Remove the inner border and padding in Firefox.
- */
-button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
-    border-style: none;
-    padding: 0;
-}
-
-/**
- * Restore the focus styles unset by the previous rule.
- */
-button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
-    outline: 1px dotted ButtonText;
-}
-
-/**
- * Correct the padding in Firefox.
- */
-fieldset {
-    padding: 0.35em 0.75em 0.625em;
-}
-
-/**
- * 1. Correct the text wrapping in Edge and IE.
- * 2. Correct the color inheritance from `fieldset` elements in IE.
- * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
- */
-legend {
-    box-sizing: border-box;
-    /* 1 */
-    color: inherit;
-    /* 2 */
-    display: table;
-    /* 1 */
-    max-width: 100%;
-    /* 1 */
-    padding: 0;
-    /* 3 */
-    white-space: normal;
-    /* 1 */
-}
-
-/**
- * Add the correct vertical alignment in Chrome, Firefox, and Opera.
- */
-progress {
-    vertical-align: baseline;
-}
-
-/**
- * Remove the default vertical scrollbar in IE 10+.
- */
-textarea {
-    overflow: auto;
-}
-
-/**
- * 1. Add the correct box sizing in IE 10.
- * 2. Remove the padding in IE 10.
- */
-[type="checkbox"],
-[type="radio"] {
-    box-sizing: border-box;
-    /* 1 */
-    padding: 0;
-    /* 2 */
-}
-
-/**
- * Correct the cursor style of increment and decrement buttons in Chrome.
- */
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-    height: auto;
-}
-
-/**
- * 1. Correct the odd appearance in Chrome and Safari.
- * 2. Correct the outline style in Safari.
- */
-[type="search"] {
-    -webkit-appearance: textfield;
-    /* 1 */
-    outline-offset: -2px;
-    /* 2 */
-}
-
-/**
- * Remove the inner padding in Chrome and Safari on macOS.
- */
-[type="search"]::-webkit-search-decoration {
-    -webkit-appearance: none;
-}
-
-/**
- * 1. Correct the inability to style clickable types in iOS and Safari.
- * 2. Change font properties to `inherit` in Safari.
- */
-::-webkit-file-upload-button {
-    -webkit-appearance: button;
-    /* 1 */
-    font: inherit;
-    /* 2 */
-}
-
-/* Interactive
-   ========================================================================== */
-/*
- * Add the correct display in Edge, IE 10+, and Firefox.
- */
-details {
-    display: block;
-}
-
-/*
- * Add the correct display in all browsers.
- */
-summary {
-    display: list-item;
-}
-
-/* Misc
-   ========================================================================== */
-/**
- * Add the correct display in IE 10+.
- */
-template {
-    display: none;
-}
-
-/**
- * Add the correct display in IE 10.
- */
-[hidden] {
-    display: none;
-}
-
 @font-face {
-    font-family: "TT Lakes";
-    src: url(./fonts/TTLakes-Regular.eot);
-    src: url(./fonts/TTLakes-Regular.eot?#iefix) format("embedded-opentype"),
-    url(./fonts/TTLakes-Regular.woff) format("woff"),
-    url(./fonts/TTLakes-Regular.ttf) format("truetype");
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "TT Lakes";
-    src: url(./fonts/TTLakes-Medium.eot);
-    src: url(./fonts/TTLakes-Medium.eot?#iefix) format("embedded-opentype"),
-    url(./fonts/TTLakes-Medium.woff) format("woff"),
-    url(./fonts/TTLakes-Medium.ttf) format("truetype");
-    font-weight: 500;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: "TT Lakes";
-    src: url(./fonts/TTLakes-Bold.eot);
-    src: url(./fonts/TTLakes-Bold.eot?#iefix) format("embedded-opentype"),
-    url(./fonts/TTLakes-Bold.woff) format("woff"),
-    url(./fonts/TTLakes-Bold.ttf) format("truetype");
+    font-family: 'TT Lakes';
+    src: url("../fonts/TTLakes/TTLakes-Bold.eot");
+    src: local("TT Lakes Bold"), local("../fonts/TTLakes/TTLakes-Bold"), url("../fonts/TTLakes/TTLakes-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/TTLakes/TTLakes-Bold.woff") format("woff"), url("../fonts/TTLakes/TTLakes-Bold.ttf") format("truetype");
     font-weight: bold;
     font-style: normal;
 }
 
-html,
-body {
-    font-family: "TT Lakes";
+@font-face {
+    font-family: 'TT Lakes';
+    src: url("../fonts/TTLakes/TTLakes-Medium.eot");
+    src: local("TT Lakes Medium"), local("../fonts/TTLakes/TTLakes-Medium"), url("../fonts/TTLakes/TTLakes-Medium.eot?#iefix") format("embedded-opentype"), url("../fonts/TTLakes/TTLakes-Medium.woff") format("woff"), url("../fonts/TTLakes/TTLakes-Medium.ttf") format("truetype");
     font-weight: 500;
-    background-color: #f8f8f8;
+    font-style: normal;
 }
 
-* {
+@font-face {
+    font-family: 'TT Lakes';
+    src: url("../fonts/TTLakes/TTLakes-Regular.eot");
+    src: local("TT Lakes Regular"), local("../fonts/TTLakes/TTLakes-Regular"), url("../fonts/TTLakes/TTLakes-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/TTLakes/TTLakes-Regular.woff") format("woff"), url("../fonts/TTLakes/TTLakes-Regular.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+
+*,
+*::before,
+*::after {
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
-.brands__title {
-    padding: 16px;
+body {
+    font-family: 'TT Lakes', sans-serif;
+    color: #1b1c21;
+    background-color: #f8f8f8;
 }
 
-.brands__expand {
-    margin-left: 24px;
+.visually-hidden {
+    position: absolute;
+    overflow: hidden;
+    white-space: nowrap;
+    clip: rect(0 0 0 0);
+    margin: -1px;
+    padding: 0;
+    width: 1px;
+    height: 1px;
+    border: 0;
+    opacity: 0;
+}
+
+.brands__title {
+    margin-bottom: 16px;
 }
 
 .title {
-    width: 100%;
-    max-height: 80px;
+    border-top: 1px solid #d9fff5;
+    background: -webkit-gradient(linear, left top, right top, color-stop(1.39%, #f8f8f8), to(#ffffff));
+    background: -webkit-linear-gradient(left, #f8f8f8 1.39%, #ffffff 100%);
+    background: -o-linear-gradient(left, #f8f8f8 1.39%, #ffffff 100%);
     background: linear-gradient(90deg, #f8f8f8 1.39%, #ffffff 100%);
 }
-.title h1 {
+
+.title__text {
     margin: 0;
-    font-family: "TT Lakes";
-    font-weight: normal;
-    text-transform: uppercase;
+    padding: 16px;
+    font-size: 16px;
     line-height: 24px;
     letter-spacing: -0.2px;
+    text-transform: uppercase;
+    font-weight: normal;
     color: #7e7e82;
-    font-size: 16px;
 }
 
-.swiper-container {
-    padding-left: 16px;
-    padding-bottom: 52px;
-}
-
-.swiper-wrapper {
-    margin-top: 16px;
-}
-
-.swiper-slide {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.cards__item {
+    margin-right: 16px;
     padding: 0 16px;
-    max-width: 240px;
+    width: 240px;
     height: 72px;
-    cursor: pointer;
+}
+
+.card {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
     border-radius: 6px;
     border: 1px solid #eaeaea;
     background-color: #ffffff;
-}
-.swiper-slide:hover .swiper__button {
-    transform: scale(1.05) rotate(90deg);
-}
-.swiper-slide-expanded {
-    display: flex;
+    cursor: pointer;
 }
 
-.swiper__button {
+.button {
     width: 40px;
     height: 40px;
     border: 2px solid #ff3e79;
     border-radius: 20px;
-    background: url(img/arrow.svg) center no-repeat;
-    transition: 0.5s;
-    transition-property: transform;
+    background: url(../img/dropdown.svg) center no-repeat;
+    cursor: pointer;
+    -webkit-transition: background-color 0.25s ease;
+    -o-transition: background-color 0.25s ease;
+    transition: background-color 0.25s ease;
 }
 
-.swiper-pagination {
-    bottom: 24px !important;
+.card:hover > .button {
+    background-color: rgba(255, 62, 121, 0.25);
+    -webkit-transition: background-color 0.25s ease, -webkit-transform 0.25s ease;
+    transition: background-color 0.25s ease, -webkit-transform 0.25s ease;
+    -o-transition: transform 0.25s ease, background-color 0.25s ease;
+    transition: transform 0.25s ease, background-color 0.25s ease;
+    transition: transform 0.25s ease, background-color 0.25s ease, -webkit-transform 0.25s ease;
 }
 
-.expand {
+.show-more {
     display: none;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    border: none;
+    background-color: transparent;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: -0.2px;
+    cursor: pointer;
+    -webkit-transition: color 0.25s ease;
+    -o-transition: color 0.25s ease;
+    transition: color 0.25s ease;
 }
-.expand__arrows {
-    transition: transform 0.25s;
+
+.show-more:hover {
+    color: #ff3e79;
+    -webkit-transition: color 0.25s ease;
+    -o-transition: color 0.25s ease;
+    transition: color 0.25s ease;
 }
-.expand__arrows-rotated {
+
+.show-more::before {
+    content: url(../img/expand.svg);
+    width: 24px;
+    height: 24px;
+    margin-right: 8px;
+    -webkit-transition: -webkit-transform 0.5s;
+    transition: -webkit-transform 0.5s;
+    -o-transition: transform 0.5s;
+    transition: transform 0.5s;
+    transition: transform 0.5s, -webkit-transform 0.5s;
+}
+
+.show-more--active::before {
+    -webkit-transform: rotate(-180deg);
+    -ms-transform: rotate(-180deg);
     transform: rotate(-180deg);
+    -webkit-transition: -webkit-transform 0.5s;
+    transition: -webkit-transform 0.5s;
+    -o-transition: transform 0.5s;
+    transition: transform 0.5s;
+    transition: transform 0.5s, -webkit-transform 0.5s;
 }
 
-@media screen and (min-width: 768px) {
+.fade {
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 24px;
+    background: -webkit-gradient(linear, right top, left top, color-stop(16.84%, #f8f8f8), to(rgba(248, 248, 248, 0.0001)));
+    background: -webkit-linear-gradient(right, #f8f8f8 16.84%, rgba(248, 248, 248, 0.0001) 100%);
+    background: -o-linear-gradient(right, #f8f8f8 16.84%, rgba(248, 248, 248, 0.0001) 100%);
+    background: linear-gradient(270deg, #f8f8f8 16.84%, rgba(248, 248, 248, 0.0001) 100%);
+}
+
+.swiper-container {
+    padding-left: 16px;
+    padding-bottom: 24px;
+}
+
+.swiper-wrapper {
+    position: static;
+    margin-bottom: 16px;
+}
+
+.swiper-pagination-bullet {
+    background-color: #dddddd;
+    width: 12px;
+    height: 12px;
+    opacity: 1;
+    margin: 0 12px;
+}
+
+.swiper-pagination-bullet-active {
+    background-color: #b5b6bc;
+}
+
+@media (min-width: 768px) {
     .brands__title {
-        padding: 16px;
+        margin-bottom: 24px;
     }
-    .brands .swiper-container {
-        overflow: visible;
-        padding: 0;
-        padding-bottom: 24px;
+    .title__text {
+        margin: 0 auto;
+        padding: 16px 24px;
+        max-width: 768px;
     }
-    .brands .swiper-wrapper {
-        box-sizing: border-box;
-        display: grid;
-        justify-items: center;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 24px;
-        margin-top: 24px;
+    .fade {
+        display: none;
+    }
+    .swiper-pagination {
+        display: none;
+    }
+    .swiper-container {
         padding: 0 24px;
+        margin-bottom: 24px;
     }
-    .brands .swiper-pagination {
-        display: none;
+    .swiper-collapsed {
+        max-height: 160px;
+        -webkit-transition: max-height 0.5s linear;
+        -o-transition: max-height 0.5s linear;
+        transition: max-height 0.5s linear;
     }
-    .brands .expand {
+    .swiper-expanded {
+        max-height: 1000px;
+        -webkit-transition: max-height 0.5s linear;
+        -o-transition: max-height 0.5s linear;
+        transition: max-height 0.5s linear;
+    }
+    .swiper-wrapper {
+        margin: 0;
+    }
+    .cards {
+        display: -ms-grid;
+        display: grid;
+        -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+        justify-items: center;
+        row-gap: 16px;
+        -webkit-column-gap: 24px;
+        column-gap: 24px;
+    }
+    .cards__item {
+        margin: 0;
+        width: 224px;
+    }
+    .brands__show-more {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        cursor: pointer;
-        max-width: 133px;
-        height: 24px;
+        padding: 0;
+        margin-left: 24px;
+    }
+    .brands_container {
+        max-width: 768px;
+        margin: 0 auto;
     }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1030px) {
-    .swiper-slide:nth-last-of-type(1),
-    .swiper-slide:nth-last-of-type(2) {
-        display: none;
+@media (min-width: 1120px) {
+    .title__text {
+        margin: 0 auto;
+        padding: 16px 32px;
+        max-width: 1120px;
     }
-}
-
-@media screen and (min-width: 1030px) {
-    .brands .swiper-wrapper {
+    .swiper-container {
+        padding: 0 32px;
+    }
+    .brands_container {
+        max-width: 1120px;
+        margin: 0 auto;
+    }
+    .cards {
+        display: -ms-grid;
+        display: grid;
+        -ms-grid-columns: (1fr)[4];
         grid-template-columns: repeat(4, 1fr);
+        justify-items: center;
+        row-gap: 16px;
+        -webkit-column-gap: 32px;
+        column-gap: 32px;
+    }
+    .cards__item {
+        margin: 0;
+        width: 240px;
+    }
+    .brands__show-more {
+        margin-left: 32px;
     }
 }
-
-/*# sourceMappingURL=style.css.map*/
