--- a/1.5/style.css
+++ b/1.5/style.css
@@ -1,23 +1,23 @@
 @font-face {
     font-family: 'TT Lakes';
-    src: url("../fonts/TTLakes/TTLakes-Bold.eot");
-    src: local("TT Lakes Bold"), local("../fonts/TTLakes/TTLakes-Bold"), url("../fonts/TTLakes/TTLakes-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/TTLakes/TTLakes-Bold.woff") format("woff"), url("../fonts/TTLakes/TTLakes-Bold.ttf") format("truetype");
+    src: url("fonts/TTLakes-Bold.eot");
+    src: local("TT Lakes Bold"), local("../fonts/TTLakes/TTLakes-Bold"), url("/fonts/TTLakes-Bold.eot?#iefix") format("embedded-opentype"), url("fonts/TTLakes-Bold.woff") format("woff"), url("/fonts/TTLakes-Bold.ttf") format("truetype");
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'TT Lakes';
-    src: url("../fonts/TTLakes/TTLakes-Medium.eot");
-    src: local("TT Lakes Medium"), local("../fonts/TTLakes/TTLakes-Medium"), url("../fonts/TTLakes/TTLakes-Medium.eot?#iefix") format("embedded-opentype"), url("../fonts/TTLakes/TTLakes-Medium.woff") format("woff"), url("../fonts/TTLakes/TTLakes-Medium.ttf") format("truetype");
+    src: url("/fonts/TTLakes-Medium.eot");
+    src: local("TT Lakes Medium"), local("../fonts/TTLakes/TTLakes-Medium"), url("/fonts/TTLakes-Medium.eot?#iefix") format("embedded-opentype"), url("fonts/TTLakes-Medium.woff") format("woff"), url("/fonts/TTLakes-Medium.ttf") format("truetype");
     font-weight: 500;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'TT Lakes';
-    src: url("../fonts/TTLakes/TTLakes-Regular.eot");
-    src: local("TT Lakes Regular"), local("../fonts/TTLakes/TTLakes-Regular"), url("../fonts/TTLakes/TTLakes-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/TTLakes/TTLakes-Regular.woff") format("woff"), url("../fonts/TTLakes/TTLakes-Regular.ttf") format("truetype");
+    src: url("fonts/TTLakes-Regular.eot");
+    src: local("TT Lakes Regular"), local("../fonts/TTLakes/TTLakes-Regular"), url("fonts/TTLakes-Regular.eot?#iefix") format("embedded-opentype"), url("fonts/TTLakes-Regular.woff") format("woff"), url("fonts/TTLakes-Regular.ttf") format("truetype");
     font-weight: normal;
     font-style: normal;
 }
@@ -101,7 +101,7 @@ body {
     height: 40px;
     border: 2px solid #ff3e79;
     border-radius: 20px;
-    background: url(../img/dropdown.svg) center no-repeat;
+    background: url(/img/expand.svg) center no-repeat;
     cursor: pointer;
     -webkit-transition: background-color 0.25s ease;
     -o-transition: background-color 0.25s ease;
@@ -142,7 +142,7 @@ body {
 }
 
 .show-more::before {
-    content: url(../img/expand.svg);
+    content: url(/img/expand.svg);
     width: 24px;
     height: 24px;
     margin-right: 8px;
