--- a/1.5/style.css
+++ b/1.5/style.css
@@ -236,7 +236,7 @@ body {
     .cards {
         display: -ms-grid;
         display: grid;
-        -ms-grid-columns: (1fr)[3];
+       // -ms-grid-columns: (1fr)[3];
         grid-template-columns: repeat(3, 1fr);
         justify-items: center;
         row-gap: 16px;
@@ -276,7 +276,7 @@ body {
     .cards {
         display: -ms-grid;
         display: grid;
-        -ms-grid-columns: (1fr)[4];
+      //  -ms-grid-columns: (1fr)[4];
         grid-template-columns: repeat(4, 1fr);
         justify-items: center;
         row-gap: 16px;
